Graph: Update properties of existing edges and nodes

--- a/src/component/header.css
+++ b/src/component/header.css
@@ -21,6 +21,7 @@
     justify-content: space-between;
     box-sizing: border-box;
     color: rgba(0, 0, 0, 0.3);
+    transition: none;
 }
 .toolbar .tool.active{
     color: #333;
