Action: Zoom in/out controler

--- a/src/component/header.css
+++ b/src/component/header.css
@@ -4,9 +4,10 @@
 }
 
 .toolbar {
-    height: 64px;
+    height: auto;
     display: flex;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 .toolbar .tool {
