--- a/src/component/header.css
+++ b/src/component/header.css
@@ -16,7 +16,6 @@
     display: inline-flex;
     flex-direction: column;
     width: 64px;
-    height: 100%;
     align-items: center;
     cursor: pointer;
     justify-content: space-between;
@@ -77,4 +76,9 @@
 .hsep {
     width: 100%;
     height: 1px;
+}
+
+.rc-switch-checked{
+    border: 1px solid #1e88e5;
+    background-color: #1e88e5;
 }
