--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,9 @@
 }
 
 .body {
-  background-color: green;
-  /* width: 100%; */
-  /* height: calc(100vh - 96px); */
   padding: 50px;
   background-color: rgb(240, 242, 245);
-  /* box-sizing: border-box; */
-  /* border: 1px solid; */
   height: -webkit-fill-available;
-  /* border: 1px solid; */
   flex: 1;
 }
 
@@ -36,4 +30,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width: 1000px) {
+  .body {
+    padding: 40px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .body {
+    padding: 35px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .body {
+    padding: 20px;
+  }
 }
