--- a/src/component/modal.css
+++ b/src/component/modal.css
@@ -1,15 +1,16 @@
-.ReactModalPortal *{
+.ReactModalPortal * {
     transition: all 200ms ease-out;
     z-index: 3
 }
+
 .ReactModalPortal .Modal {
     position: absolute;
-    top: 30%;
+    top: 10%;
     left: 50%;
     right: auto;
     bottom: auto;
     margin-right: -50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     width: 50%;
     background-color: rgba(255, 255, 255, 0);
 }
@@ -33,11 +34,10 @@
     border-top-right-radius: calc(.3rem - 1px)
 }
 
-.ReactModalPortal .heading{
+.ReactModalPortal .heading {
     margin-bottom: 0;
     line-height: 1.5;
 }
-
 
 .ReactModalPortal .modal-content {
     position: relative;
@@ -47,7 +47,7 @@
     pointer-events: auto;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.2);
+    border: 1px solid rgba(0, 0, 0, .2);
     border-radius: .3rem;
     outline: 0;
 }
@@ -61,6 +61,7 @@
     border-top-left-radius: calc(.3rem - 1px);
     border-top-right-radius: calc(.3rem - 1px);
 }
+
 .ReactModalPortal .modal-title {
     margin-bottom: 0;
     line-height: 1.5;
@@ -76,6 +77,7 @@
     background: transparent;
     color: #666
 }
+
 .ReactModalPortal .sr-only {
     position: absolute;
     width: 1px;
@@ -83,7 +85,7 @@
     padding: 0;
     margin: -1px;
     overflow: hidden;
-    clip: rect(0,0,0,0);
+    clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
 }
@@ -110,6 +112,7 @@
     background-color: #6c757d;
     border-color: #6c757d;
 }
+
 .ReactModalPortal .modal-footer>* {
     margin: .25rem;
 }
@@ -141,10 +144,27 @@
     border-color: #007bff;
 }
 
-.ReactModalPortal .modal-content.closing{
+.ReactModalPortal .modal-content.closing {
     transform: translateY(-70%);
     opacity: 0;
 }
-.ReactModalPortal .Overlay.closing{
+
+.ReactModalPortal .Overlay.closing {
     opacity: 0;
 }
+.ReactModal__Overlay.ReactModal__Overlay--after-open.Overlay{
+    overflow: auto;
+}
+
+@media screen and (max-width: 1200px) {
+    .ReactModalPortal .Modal {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .ReactModalPortal .Modal {
+        width: 90%;
+    }
+}
+
