Action: Export graph as PNG

--- a/src/component/header.css
+++ b/src/component/header.css
@@ -16,7 +16,7 @@
     padding-bottom: 5px;
     display: inline-flex;
     flex-direction: column;
-    width: 64px;
+    min-width: 64px;
     align-items: center;
     cursor: pointer;
     justify-content: space-between;
@@ -84,4 +84,12 @@
 .rc-switch-checked{
     border: 1px solid #1e88e5;
     background-color: #1e88e5;
+}
+.rc-menu-container{
+    position: absolute;
+}
+
+.rc-menu-button {
+    border: 0;
+    background: transparent;
 }
