--- a/src/component/modals/parent-modal.css
+++ b/src/component/modals/parent-modal.css
@@ -1,5 +1,8 @@
 .ReactModalPortal * {
     transition: all 200ms ease-out;
+}
+
+.ReactModalPortal, .ReactModal__Overlay {
     z-index: 3
 }
 
@@ -96,54 +99,6 @@
     padding: 1rem;
 }
 
-.ReactModalPortal .modal-footer {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: flex-end;
-    padding: .75rem;
-    border-top: 1px solid #dee2e6;
-    border-bottom-right-radius: calc(.3rem - 1px);
-    border-bottom-left-radius: calc(.3rem - 1px);
-}
-
-.ReactModalPortal .btn-secondary {
-    color: #fff;
-    background-color: #6c757d;
-    border-color: #6c757d;
-}
-
-.ReactModalPortal .modal-footer>* {
-    margin: .25rem;
-}
-
-.ReactModalPortal .btn:not(:disabled):not(.disabled) {
-    cursor: pointer;
-}
-
-.ReactModalPortal .btn {
-    display: inline-block;
-    font-weight: 400;
-    color: #212529;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: .375rem .75rem;
-    /* font-size: 1rem; */
-    line-height: 1.5;
-    border-radius: .25rem;
-}
-
-.ReactModalPortal .btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-}
-
 .ReactModalPortal .modal-content.closing {
     transform: translateY(-70%);
     opacity: 0;
@@ -167,4 +122,3 @@
         width: 90%;
     }
 }
-
