UI: styling project details modal Action: Clear all, new project, edit details

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,39 @@
   align-items: center;
 }
 
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+}
+
+
+.btn-primary {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-secondary {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+
+.btn:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1000px) {
   .body {
     padding: 40px;
