--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
+input {
+  border: 1px solid #999;
+}
+
 .container {
   height: 100vh;
   display: flex;
@@ -45,7 +49,6 @@
   line-height: 1.5;
   border-radius: .25rem;
 }
-
 
 .btn-primary {
   color: #fff;
