--- a/src/component/modals/edgeDetails.css
+++ b/src/component/modals/edgeDetails.css
@@ -16,9 +16,11 @@
 .edge-div{
     border: none;
     width: 240px;
-    height: 1px;
+    height: 0;
     background-color: rgb(0, 0, 0);
     display: inline-block;
+    border: none;
+    background: transparent;
 }
 
 .edgeform input[type="number"] {
@@ -39,9 +41,9 @@
     padding: 20px;
 }
 
-.edgeform .edgeLabel {
+.span-rest{
     grid-column: 2 / span 3;
-    width: 80%;
+
 }
 
 .edgeform .color-box{
@@ -85,12 +87,17 @@
     margin-top: 30px;
 }
 
+.hascheckbox{
+    display: flex;
+justify-content: space-between;
+}
+
 @media screen and (max-width: 650px) {
     .edgeform .form  {
         grid-template-columns: auto auto;
         width: auto
     }
-    .edgeform .edgeLabel {
+    .edgeform .span-rest {
         grid-column: 2;
     }
 }
