--- a/src/component/codeEdit.css
+++ b/src/component/codeEdit.css
@@ -28,3 +28,11 @@
 .textField:focus{
     outline: auto;
 }
+
+.textField .docStr{
+    background-color: transparent;
+    font-size: 15px;
+    font-family: monospace;
+    width: 100%;
+    white-space: break-spaces;
+}
