--- a/src/component/modals/settings.css
+++ b/src/component/modals/settings.css
@@ -22,6 +22,12 @@
     margin: .25rem;
 }
 
+.setting-container .error{
+    color: #ff0000;
+    text-align: center;
+    grid-column: 1/3;
+}
+
 @media screen and (max-width: 890px) {
     .setting-container{
         grid-template-columns: auto;
