--- a/src/component/modals/project-details.css
+++ b/src/component/modals/project-details.css
@@ -25,3 +25,7 @@
     padding: 0;
     margin: 20px 0;
 }
+.proj-details .serverIDText{
+    width: calc( 100% - 20px);
+    margin-bottom: 20px;
+}
